--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 ultralytics==8.1.25
-opencv_python==4.10.0.84
-opencv-python-headless
+opencv-python-headless==4.11.0.86
 streamlit
 Pillow
 matplotlib
