--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 ultralytics==8.1.25
 opencv-python-headless==4.11.0.86
-streamlit
+streamlit==1.45.1
 Pillow
 matplotlib
 numpy
 scipy
 seaborn
-torch==2.1.0
-torchvision==0.16.0
+torch==2.2.0
