--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-ultralytics==8.1.25
-opencv-python-headless==4.11.0.86
-streamlit==1.45.1
+ultralytics>=8.1.25
+opencv-python-headless==4.7.0.72
+streamlit>=1.45.1
 Pillow
 matplotlib
 numpy
